--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
          <link href="css/fonts.css" rel="stylesheet">
          <!-- Template CSS -->
          <link rel="stylesheet" href="css/style.css">
+         <link rel="stylesheet" href="css/lightbox.min.css">
          <link media="all" type="text/css" rel="stylesheet" href="css/aos.css">
          <link rel="stylesheet" href="css/custom.css">
          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -362,6 +363,7 @@
             <script src="js/theme-change.js"></script>
             <script src="js/owl.carousel.js"></script>
             <script src="js/aos.js"></script>
+            <script src="js/lightbox.min.js"></script>
 
             <script>
                $(document).ready(function () {
