--- a/project.html
+++ b/project.html
@@ -11,6 +11,7 @@
          <!-- Template CSS -->
          <link rel="stylesheet" href="css/style.css">
          <link media="all" type="text/css" rel="stylesheet" href="css/aos.css">
+         <link rel="stylesheet" href="css/lightbox.min.css">
          <link rel="stylesheet" href="css/custom.css">
          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
       </head>
@@ -114,7 +115,7 @@
 
 
            <!-- banner section -->
-            <section class="home-hr-marinetec-com-info pt-lg-3">
+            <!-- <section class="home-hr-marinetec-com-info pt-lg-3">
                <div class="container">
                   <div class="row m-0 mt-lg-5">
                      <div class="col-12 col-md-6">
@@ -129,7 +130,7 @@
                         </div>
                      </div>
                </div>
-            </section>
+            </section> -->
             <!-- banner section end -->
             
             <!-- team -->
@@ -139,7 +140,7 @@
                      <div class="col-12 pt-lg-3">
                         <div class="section_top">
                            <div class="text_part text-center">
-                              <h2 class="section_heading primary-text" >Completed Projects</h2>
+                              <h2 class="section_heading primary-text" >Our Completed Projects</h2>
                               <p>We are a creative agency that believes in the power of creative ideas and great design.</p>
                            </div>
                         </div>
@@ -147,58 +148,68 @@
                      
                      <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 mt-4" data-aos="fade-up" data-aos-delay="200">
                         <div class="project_box aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
-                            <div class="projects_img">
-                                <img src="images/project1.png" alt="">
-                            </div>
-  
-                            <div class="project_content white_back">
-                                <h4 class="sub_heading primary-text">Mooring Boat</h4>
-                            </div>
+                           <a href="project_details.html">
+                              <div class="projects_img">
+                                 <img src="images/project1.png" alt="">
+                              </div>
+   
+                              <div class="project_content white_back">
+                                 <h4 class="sub_heading primary-text">Mooring Boat</h4>
+                              </div>
+                           </a> 
                         </div>
                      </div>
 
                      <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 mt-4" data-aos="fade-up" data-aos-delay="200">
                         <div class="project_box aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
-                            <div class="projects_img">
-                                <img src="images/project2.png" alt="">
-                            </div>
-  
-                            <div class="project_content white_back">
-                                <h4 class="sub_heading primary-text">45m Power Barge</h4>
-                            </div>
+                           <a href="project_details.html"> 
+                              <div class="projects_img">
+                                 <img src="images/project2.png" alt="">
+                              </div>
+   
+                              <div class="project_content white_back">
+                                 <h4 class="sub_heading primary-text">45m Power Barge</h4>
+                              </div>
+                           </a> 
                         </div>
                      </div>
                      <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 mt-4" data-aos="fade-up" data-aos-delay="200">
                         <div class="project_box aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
-                            <div class="projects_img">
-                                <img src="images/project3.png" alt="">
-                            </div>
-  
-                            <div class="project_content white_back">
-                                <h4 class="sub_heading primary-text">90m River Push Barge</h4>
-                            </div>
+                           <a href="project_details.html"> 
+                              <div class="projects_img">
+                                 <img src="images/project3.png" alt="">
+                              </div>
+   
+                              <div class="project_content white_back">
+                                 <h4 class="sub_heading primary-text">90m River Push Barge</h4>
+                              </div>
+                           </a>
                         </div>
                      </div>
                      <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 mt-4" data-aos="fade-up" data-aos-delay="200">
                         <div class="project_box aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
-                            <div class="projects_img">
-                                <img src="images/project4.png" alt="">
-                            </div>
-  
-                            <div class="project_content white_back">
-                                <h4 class="sub_heading primary-text">Riverside Jetty</h4>
-                            </div>
+                           <a href="project_details.html"> 
+                              <div class="projects_img">
+                                 <img src="images/project4.png" alt="">
+                              </div>
+   
+                              <div class="project_content white_back">
+                                 <h4 class="sub_heading primary-text">Riverside Jetty</h4>
+                              </div>
+                           </a>
                         </div>
                      </div>
                      <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6 col-sm-12 mt-4" data-aos="fade-up" data-aos-delay="200">
                         <div class="project_box aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
-                            <div class="projects_img">
-                                <img src="images/project5.png" alt="">
-                            </div>
-  
-                            <div class="project_content white_back">
-                                <h4 class="sub_heading primary-text">Boiler Barge</h4>
-                            </div>
+                           <a href="project_details.html"> 
+                              <div class="projects_img">
+                                 <img src="images/project5.png" alt="">
+                              </div>
+   
+                              <div class="project_content white_back">
+                                 <h4 class="sub_heading primary-text">Boiler Barge</h4>
+                              </div>
+                           </a>
                         </div>
                      </div>
                   </div>
@@ -460,6 +471,7 @@
             <script src="js/theme-change.js"></script>
             <script src="js/owl.carousel.js"></script>
             <script src="js/aos.js"></script>
+            <script src="js/lightbox.min.js"></script>
 
             <script>
                $(document).ready(function () {
