--- a/team.html
+++ b/team.html
@@ -11,6 +11,7 @@
          <!-- Template CSS -->
          <link rel="stylesheet" href="css/style.css">
          <link media="all" type="text/css" rel="stylesheet" href="css/aos.css">
+         <link rel="stylesheet" href="css/lightbox.min.css">
          <link rel="stylesheet" href="css/custom.css">
          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
       </head>
@@ -488,6 +489,7 @@
             <script src="js/theme-change.js"></script>
             <script src="js/owl.carousel.js"></script>
             <script src="js/aos.js"></script>
+            <script src="js/lightbox.min.js"></script>
 
             <script>
                $(document).ready(function () {
