--- a/index.html
+++ b/index.html
@@ -254,8 +254,8 @@
                            </div>
                         </div>
                      </div>
-                     <div class="col-xl-6 col-12 whybox-wrap-right p-lg-5">
-                        <div class="whybox-inner-content p-5 white_back aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
+                     <div class="col-xl-6 col-12 whybox-wrap-right p-lg-5" style="padding-top: 0px !important;padding-bottom: 0px !important;">
+                        <div class="whybox-inner-content p-5 white_back aos-init aos-animate h-100" data-aos="fade-up" data-aos-delay="200">
                            <div class="title-content text-left">
                               <h3 class="title-hr-marinetec primary-text">Company Overview</h3>
                               <p class="mt-3">
