--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                         <div class="col-lg-3 col-sm-6 footer-list-29 footer-2 mt-lg-0 mt-md-5 mt-4">
                            <div class="footer-logo mb-3">
                               <h2><a class="navbar-brand" href="index.html">
-                                 K<span class="sub-logo">B</span></span>
+                                 KBI<span class="sub-logo">TECH</span></span>
                                  <span class="sub-title">Ship Design & Services</span>
                                  </a>
                               </h2>
@@ -607,7 +607,7 @@
                            <ul class="mt-3">
                               <li><a href="tel:+82 10 8717 3709"><span class="fa fa-phone"></span> +82 10 8717 3709</a></li>
                               <li>
-                                  <a class="company-info-text" href="mailto:sales@kbshipdesign.com"> <span class="fa fa-envelope-o"></span>sales@kbshipdesign.com</a>
+                                  <a class="company-info-text" href="mailto:sales@kbshipdesign.com"> <span class="fa fa-envelope-o"></span>sales@kbitech.com</a>
                               </li>
                               <li><span class="fa fa-map-marker"></span>
                                  10 Gwahaksandan-ro 306, Gangseo-gu, Busan, South Korea.
@@ -656,7 +656,9 @@
             <section class="hr-marinetec-copyright">
                <div class="container">
                   <div class="row bottom-copies">
-                     <p class="col-lg-8 copy-footer-29">© 2024 KB Ship Design & Services | All Rights Reserved.
+                     <p class="col-lg-8 copy-footer-29">© 2024 KBITECH | All Rights Reserved.
+                        <span class="footer-developer-by-text">Developed By  <a
+                        href="https://riyadhossein.com" target="_blank" class="text-decoration-none">Md. Riyad Hossein</a></span>
                      </p>
                      <div class="col-lg-4 main-social-footer-29">
                         <a href="#" class="facebook"><i class="social-icon fa-brands fa-facebook"></i></a>
