--- a/project_details.html
+++ b/project_details.html
@@ -131,13 +131,9 @@
                                 <p><b>Client:</b> CUPCAKE CO</p>
                                 <p><b>Date:</b> 14.02.2020</p>
                                 <p><b>Team Members:</b> James Doe</p>
+                                <p><b>Business Type:</b> Marine Service</p>
                                 <p><b>Category:</b> Service 1</p>
                                 <p><b>Location:</b> Pohang Port, South Korea</p>
-                            </div>
-
-                            <div class="project-info-box mt-0">
-                                <h5>PROJECT DETAILS</h5>
-                                <p class="mb-0">Vivamus pellentesque, felis in aliquam ullamcorper, lorem tortor porttitor erat, hendrerit porta nunc tellus eu lectus. Ut vel imperdiet est. Pellentesque condimentum, dui et blandit laoreet, quam nisi tincidunt tortor.</p>
                             </div>
                         </div>
                 
@@ -148,6 +144,14 @@
                                 <p><b>Skills:</b> Illustrator</p>
                             </div> -->
                         </div>
+
+                        <div class="col-md-12" data-aos="fade-up" data-aos-delay="200">
+                           <div class="project-info-box">
+                              <h5>PROJECT DETAILS</h5>
+                              <p class="mb-0">Vivamus pellentesque, felis in aliquam ullamcorper, lorem tortor porttitor erat, hendrerit porta nunc tellus eu lectus. Ut vel imperdiet est. Pellentesque condimentum, dui et blandit laoreet, quam nisi tincidunt tortor.</p>
+                           </div>
+                        </div>
+
                     </div>
                </div>
             </section>
